# masters_private

./: .gitignore  README.md
Backend/: book.txt  execution_times.csv  execution_times_performer.csv  fast_whisper_tst.py  main.py  ocr.py  package-lock.json  package.json  readme.md  requirements.txt  scriptwatch.py  search_log.csv  settings.json  stt.py  test_whisper.py  transcript2.txt
Backend/broker/: __init__.py
Backend/gui/: app.py
Backend/old_backend/: README.md  input_extracted_data.json  pyproject.toml  videosegmentation.py
Backend/project/: pyproject.toml
Backend/project/project/: __init__.py  audio_buffer.py  fast_whisper.py  plot_wave.py  script.txt
Backend/server/: server.js
Backend/staiged-backendd/: mqtt.py  output_extracted_data.json
Backend/staiged_backend/: compare_fuzzy methods.csv  main.py  mqtt_broker.py  package-lock.json  package.json  plot.py  readme.md  requirements.txt  results.csv  search_log.csv  settings.json  skipped.csv  test3.py  transcript.txt  transcript2.txt  tts_server.py
Experimentation/: benchmark_performer_tracker.py  benchmark_speech_to_script_pointer.py  combined.py  metrics_summary.csv  noise.csv  plot.py  recording.csv  search_log copy.csv  speech_to_script_pointer_speed.py  whisper_compare.py
Experimentation/experiment/: 1.py  2.py
Experimentation/labs/: calc_average_latencies.py  compare_faster_whisper_compute.py  csv_compute_type.py  latency_plots_with_average.py  plot.py  plot_compare_duration.py  prep_dataset.py  run_compare_beam_thread_faster_whisper.py  (+5 more)
Frontend/: README.md  l10n.yaml  pubspec.yaml
(+1483 files in other folders)
